--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "json-server",
     "version": "1.0.0",
     "scripts": {
-      "start": "json-server --watch db.json --port 3000"
+    "start": "json-server --watch db.json --port $PORT"
+
     },
     "dependencies": {
       "json-server": "^0.17.3"
