--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "json-server",
     "version": "1.0.0",
-    "scripts": {
-    "start": "json-server --watch db.json --port $PORT"
-
-    },
+   "scripts": {
+  "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
+},
     "dependencies": {
       "json-server": "^0.17.3"
     }
