--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-    "name": "json-server",
-    "version": "1.0.0",
-   "scripts": {
-  "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
-},
-    "dependencies": {
-      "json-server": "^0.17.3"
-    }
+  "name": "bankingapp-mock-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start" : "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "json-server": "^0.16.2"
   }
-  
+}
